--- a/onepage.html
+++ b/onepage.html
@@ -58,7 +58,7 @@
     <!-- END nav -->
     
 
-    <section class="probootstrap-cover overflow-hidden relative"  style="background-image: url('assets/images/bg_1.jpg');"  id="section-home">
+    <section class="probootstrap-cover overflow-hidden relative"  style="background-image: url('https://cdn.sortiraparis.com/images/80/1462/863664-le-salon-mondial-du-tourisme-2023-revient-a-paris-invitations-gratuites.jpg');"  id="section-home">
       <div class="overlay"></div>
       <div class="container">
         <div class="row align-items-center">
