--- a/travel.html
+++ b/travel.html
@@ -13,7 +13,7 @@
 		<title>Kingztravel</title>
 		<meta name="description" content="">
 		<meta name="keywords" content="">
-    
+
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,700" rel="stylesheet">
 
 		<link rel="stylesheet" href="assets/css/bootstrap/bootstrap.css">
@@ -56,7 +56,7 @@
     <!-- END nav -->
     
 
-    <section class="probootstrap-cover overflow-hidden relative"  style="background-image: url('assets/images/bg_1.jpg');" data-stellar-background-ratio="0.5" id="section-home">
+    <section class="probootstrap-cover overflow-hidden relative"  style="background-image: url('https://cdn.sortiraparis.com/images/80/1462/863664-le-salon-mondial-du-tourisme-2023-revient-a-paris-invitations-gratuites.jpg');" data-stellar-background-ratio="0.5" id="section-home">
       <div class="overlay"></div>
       <div class="container">
         <div class="row align-items-center text-center">
