--- a/city-guides.html
+++ b/city-guides.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<title>Kingztravel</title>
+		<title>Kingstravel</title>
 		<meta name="description" content="">
 		<meta name="keywords" content="">
     
@@ -39,7 +39,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark probootstrap_navbar" id="probootstrap-navbar">
       <div class="container">
-        <a class="navbar-brand" href="/">Kingztravel</a>
+        <a class="navbar-brand" href="/">Kingstravel</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#probootstrap-menu" aria-controls="probootstrap-menu" aria-expanded="false" aria-label="Toggle navigation">
           <span><i class="ion-navicon"></i></span>
         </button>
@@ -172,45 +172,75 @@
       </div>
     </section>
     <!-- END section -->
-
     <footer class="probootstrap_section probootstrap-border-top">
       <div class="container">
         <div class="row mb-5">
           <div class="col-md-3">
             <h3 class="probootstrap_font-18 mb-3">Quick Links</h3>
             <ul class="list-unstyled">
-              <li><a href="" target="_blank">Home</a></li>
-              <li><a href="" target="_blank">About</a></li>
-              <li><a href="" target="_blank">Services</a></li>
-              <li><a href="" target="_blank">Contact</a></li>
+              <li><a href="index.html" target="_blank">Home</a></li>
+              <li><a href="services.html" target="_blank">Services</a></li>
+              <li><a href="city-guides.html" target="_blank">City Guides</a></li>
+              <li><a href="contact.html" target="_blank">Contact</a></li>
             </ul>
           </div>
           <div class="col-md-3">
-            <h3 class="probootstrap_font-18 mb-3">Quick Links</h3>
-            <ul class="list-unstyled">
-              <li><a href="" target="_blank">Home</a></li>
-              <li><a href="" target="_blank">About</a></li>
-              <li><a href="" target="_blank">Services</a></li>
-              <li><a href="" target="_blank">Contact</a></li>
-            </ul>
           </div>
-          <div class="col-md-3">
-            <h3 class="probootstrap_font-18 mb-3">Quick Links</h3>
-            <ul class="list-unstyled">
-              <li><a href="" target="_blank">Home</a></li>
-              <li><a href="" target="_blank">About</a></li>
-              <li><a href="" target="_blank">Services</a></li>
-              <li><a href="" target="_blank">Contact</a></li>
-            </ul>
-          </div>
-          <div class="col-md-3">
-            <h3 class="probootstrap_font-18 mb-3">Quick Links</h3>
-            <ul class="list-unstyled">
-              <li><a href="" target="_blank">Home</a></li>
-              <li><a href="" target="_blank">About</a></li>
-              <li><a href="" target="_blank">Services</a></li>
-              <li><a href="" target="_blank">Contact</a></li>
-            </ul>
+          <div class="col-md-6">
+            <form action="#" class="probootstrap-form">
+              <div class="form-group">
+                <div class="row mb-5">
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="fname" class="sr-only sr-only-focusable">First Name</label>
+                      <input type="text" class="form-control" id="fname" name="fname" placeholder="First Name">
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="lname" class="sr-only sr-only-focusable">Last Name</label>
+                      <input type="text" class="form-control" id="lname" name="lname" placeholder="Last Name">
+                    </div>
+                  </div>
+                </div>
+                <div class="row mb-5">
+                  <div class="col-md">
+                    <div class="form-group">
+                      <div class="probootstrap-date-wrap">
+                        <input type="email" id="" class="form-control" placeholder="Email" required>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row mb-5">
+                  <div class="col-md">
+                    <div class="form-group">
+                      <div class="probootstrap-date-wrap">
+                        <input type="number" id="" class="form-control" placeholder="Phone">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row mb-5">
+                  <div class="col-md">
+                    <div class="form-group">
+                      <div class="probootstrap-date-wrap">
+                        <textarea name="Message" id="" cols="30" class="form-control" rows="5">Message</textarea>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md">
+                    
+                  </div>
+                  <div class="col-md">
+                    <input type="submit" value="Submit" class="btn btn-primary btn-block">
+                  </div>
+                </div>
+              </div>
+            </form>
+
           </div>
         </div>
         <div class="row pt-5">
