--- a/onepage.html
+++ b/onepage.html
@@ -685,45 +685,70 @@
       </div>
     </section>
 
-
     <footer class="probootstrap_section probootstrap-border-top">
       <div class="container">
         <div class="row mb-5">
           <div class="col-md-3">
             <h3 class="probootstrap_font-18 mb-3">Quick Links</h3>
             <ul class="list-unstyled">
-              <li><a href="" target="_blank">Home</a></li>
-              <li><a href="" target="_blank">About</a></li>
-              <li><a href="" target="_blank">Services</a></li>
-              <li><a href="" target="_blank">Contact</a></li>
+              <li><a href="index.html" target="_blank">Home</a></li>
+              <li><a href="services.html" target="_blank">Services</a></li>
+              <li><a href="travel.html" target="_blank">Travel</a></li>
+              <li><a href="contact.html" target="_blank">Contact</a></li>
             </ul>
           </div>
           <div class="col-md-3">
-            <h3 class="probootstrap_font-18 mb-3">Quick Links</h3>
-            <ul class="list-unstyled">
-              <li><a href="" target="_blank">Home</a></li>
-              <li><a href="" target="_blank">About</a></li>
-              <li><a href="" target="_blank">Services</a></li>
-              <li><a href="" target="_blank">Contact</a></li>
-            </ul>
           </div>
-          <div class="col-md-3">
-            <h3 class="probootstrap_font-18 mb-3">Quick Links</h3>
-            <ul class="list-unstyled">
-              <li><a href="" target="_blank">Home</a></li>
-              <li><a href="" target="_blank">About</a></li>
-              <li><a href="" target="_blank">Services</a></li>
-              <li><a href="" target="_blank">Contact</a></li>
-            </ul>
-          </div>
-          <div class="col-md-3">
-            <h3 class="probootstrap_font-18 mb-3">Quick Links</h3>
-            <ul class="list-unstyled">
-              <li><a href="" target="_blank">Home</a></li>
-              <li><a href="" target="_blank">About</a></li>
-              <li><a href="" target="_blank">Services</a></li>
-              <li><a href="" target="_blank">Contact</a></li>
-            </ul>
+          <div class="col-md-6">
+            <form action="#" class="probootstrap-form">
+              <div class="form-group">
+                <div class="row mb-5">
+                  <div class="col-md">
+                    <div class="form-group">
+                      <div class="probootstrap-date-wrap">
+                        <input type="text" id="" class="form-control" placeholder="Name">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row mb-5">
+                  <div class="col-md">
+                    <div class="form-group">
+                      <div class="probootstrap-date-wrap">
+                        <input type="email" id="" class="form-control" placeholder="Email" required>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row mb-5">
+                  <div class="col-md">
+                    <div class="form-group">
+                      <div class="probootstrap-date-wrap">
+                        <input type="number" id="" class="form-control" placeholder="Phone">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row mb-5">
+                  <div class="col-md">
+                    <div class="form-group">
+                      <div class="probootstrap-date-wrap">
+                        <textarea name="Message" id="" cols="30" class="form-control" rows="5">Message</textarea>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md">
+                    
+                  </div>
+                  <div class="col-md">
+                    <input type="submit" value="Submit" class="btn btn-primary btn-block">
+                  </div>
+                </div>
+              </div>
+            </form>
+
           </div>
         </div>
         <div class="row pt-5">
