--- a/index.html
+++ b/index.html
@@ -358,8 +358,17 @@
               <li><a href="city-guides.html" target="_blank">City Guides</a></li>
               <li><a href="contact.html" target="_blank">Contact</a></li>
             </ul>
+            <br><br><br>
+            <h3 class="probootstrap_font-18 mb-3">Like & Subscribe</h3>
+            <div class="row">
+              <div class="col-md"><a href="" style="font-size: 30px;"><span class="icon ion-social-facebook"></span></a></div>
+              <div class="col-md"><a href="" style="font-size: 30px;"><span class="icon ion-social-instagram-outline"></span></a></div>
+              <div class="col-md"><a href="" style="font-size: 30px;"><span class="icon ion-social-linkedin"></span></a></div>
+              <div class="col-md"><a href="" style="font-size: 30px;"><span class="icon ion-social-twitter"></span></a></div>
+            </div>
           </div>
           <div class="col-md-3">
+            
           </div>
           <div class="col-md-6">
             <form action="#" class="probootstrap-form">
