--- a/onepage.html
+++ b/onepage.html
@@ -34,7 +34,18 @@
     <link rel="stylesheet" href="assets/css/helpers.css">
     <link rel="stylesheet" href="assets/css/style.css">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16443245656">
+    </script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'AW-16443245656');
+    </script>
   </head>
+
   <body data-spy="scroll" data-target="#probootstrap-navbar" data-offset="200">
   
 
